--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
 	"name": "update-boilerplate-cli",
 	"version": "0.0.0",
-	"description": "TODO",
+	"description": "CLI for updating projects to your latest boilerplate.",
 	"keywords": [
-		"TODO"
+		"boilerplate",
+		"template",
+		"update",
+		"upgrade",
+		"code",
+		"sync"
 	],
 	"bugs": "https://github.com/juliuste/update-boilerplate-cli/issues",
 	"repository": "juliuste/update-boilerplate-cli",
@@ -19,11 +24,22 @@
 	"scripts": {
 		"check-deps": "depcheck",
 		"fix": "npm run lint -- --fix",
-		"lint": "eslint src test.js",
+		"lint": "eslint src",
 		"test": "npm run lint && npm run check-deps && ava"
 	},
 	"dependencies": {
-		"meow": "^9.0.0"
+		"chalk": "^4.1.1",
+		"enquirer": "^2.3.6",
+		"git-diff": "^2.0.6",
+		"globby": "^11.0.3",
+		"just-diff": "^3.1.1",
+		"just-diff-apply": "^3.0.0",
+		"load-json-file": "^6.2.0",
+		"lodash": "^4.17.21",
+		"meow": "^9.0.0",
+		"micromatch": "^4.0.4",
+		"strip-ansi": "^7.0.0",
+		"write-json-file": "^4.3.0"
 	},
 	"devDependencies": {
 		"ava": "^3.15.0",
@@ -33,7 +49,10 @@
 		"eslint-plugin-import": "^2.23.4",
 		"eslint-plugin-node": "^11.1.0",
 		"eslint-plugin-promise": "^5.1.0",
-		"execa": "^5.0.0"
+		"execa": "^5.0.0",
+		"pify": "^5.0.0",
+		"sinon": "^11.1.1",
+		"tmp": "^0.2.1"
 	},
 	"engines": {
 		"node": ">=14"
