--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
 		"update-boilerplate": "src/cli.js"
 	},
 	"files": [
-		"src/*"
+		"src/*",
+		"!src/*.test.js"
 	],
 	"scripts": {
 		"check-deps": "depcheck",
@@ -36,7 +37,7 @@
 		"just-diff-apply": "^3.0.0",
 		"load-json-file": "^6.2.0",
 		"lodash": "^4.17.21",
-		"meow": "^9.0.0",
+		"meow": "^10.0.0",
 		"micromatch": "^4.0.4",
 		"strip-ansi": "^7.0.0",
 		"write-json-file": "^4.3.0"
