update dependencies, bugfix: pin just-diff and just-diff-apply to fixed version that are not broken

--- a/package.json
+++ b/package.json
@@ -26,33 +26,34 @@
 		"check-deps": "depcheck",
 		"fix": "npm run lint -- --fix",
 		"lint": "eslint src",
-		"test": "npm run lint && npm run check-deps && ava"
+		"test": "npm run lint && npm run check-deps && ava",
+		"prepublishOnly": "npm test"
 	},
 	"dependencies": {
-		"chalk": "^4.1.1",
+		"chalk": "^4.1.2",
 		"enquirer": "^2.3.6",
 		"git-diff": "^2.0.6",
-		"globby": "^11.0.3",
-		"just-diff": "^3.1.1",
-		"just-diff-apply": "^3.0.0",
-		"load-json-file": "^6.2.0",
+		"globby": "^12.0.2",
+		"just-diff": "3.1.1",
+		"just-diff-apply": "3.0.0",
+		"load-json-file": "^7.0.1",
 		"lodash": "^4.17.21",
-		"meow": "^10.0.0",
+		"meow": "^10.1.1",
 		"micromatch": "^4.0.4",
-		"strip-ansi": "^7.0.0",
-		"write-json-file": "^4.3.0"
+		"strip-ansi": "^7.0.1",
+		"write-json-file": "^5.0.0"
 	},
 	"devDependencies": {
 		"ava": "^3.15.0",
-		"depcheck": "^1.4.1",
-		"eslint": "^7.27.0",
+		"depcheck": "^1.4.2",
+		"eslint": "^8.1.0",
 		"eslint-config-standard": "^16.0.3",
-		"eslint-plugin-import": "^2.23.4",
+		"eslint-plugin-import": "^2.25.2",
 		"eslint-plugin-node": "^11.1.0",
-		"eslint-plugin-promise": "^5.1.0",
-		"execa": "^5.0.0",
+		"eslint-plugin-promise": "^5.1.1",
+		"execa": "^5.1.1",
 		"pify": "^5.0.0",
-		"sinon": "^11.1.1",
+		"sinon": "^12.0.1",
 		"tmp": "^0.2.1"
 	},
 	"engines": {
