--- a/package.json
+++ b/package.json
@@ -29,31 +29,34 @@
 		"test": "npm run lint && npm run check-deps && ava",
 		"prepublishOnly": "npm test"
 	},
+	"ava": {
+		"workerThreads": false
+	},
 	"dependencies": {
-		"chalk": "^4.1.2",
+		"chalk": "^5.0.1",
 		"enquirer": "^2.3.6",
 		"git-diff": "^2.0.6",
-		"globby": "^12.0.2",
-		"just-diff": "3.1.1",
-		"just-diff-apply": "3.0.0",
+		"globby": "^13.1.1",
+		"just-diff": "5.0.2",
+		"just-diff-apply": "5.3.1",
 		"load-json-file": "^7.0.1",
 		"lodash": "^4.17.21",
-		"meow": "^10.1.1",
-		"micromatch": "^4.0.4",
+		"meow": "^10.1.2",
+		"micromatch": "^4.0.5",
 		"strip-ansi": "^7.0.1",
 		"write-json-file": "^5.0.0"
 	},
 	"devDependencies": {
-		"ava": "^3.15.0",
-		"depcheck": "^1.4.2",
-		"eslint": "^8.1.0",
-		"eslint-config-standard": "^16.0.3",
-		"eslint-plugin-import": "^2.25.2",
-		"eslint-plugin-node": "^11.1.0",
-		"eslint-plugin-promise": "^5.1.1",
-		"execa": "^5.1.1",
+		"ava": "^4.2.0",
+		"depcheck": "^1.4.3",
+		"eslint": "^8.16.0",
+		"eslint-config-standard": "^17.0.0",
+		"eslint-plugin-import": "^2.26.0",
+		"eslint-plugin-n": "^15.2.0",
+		"eslint-plugin-promise": "^6.0.0",
+		"execa": "^6.1.0",
 		"pify": "^5.0.0",
-		"sinon": "^12.0.1",
+		"sinon": "^14.0.0",
 		"tmp": "^0.2.1"
 	},
 	"engines": {
